@@ -79,6 +79,7 @@ FB  53- [Configure] library not found despite --with-readline-lib [#2097]
 BA  58- [pthread] parapply could crash
 BA  59- ffinvmap(m) could SEGV on bad input
     60- ellisdivisible(E/K number field in 'x) -> incorrect priority[#2106]
+    61- idealispower(nf, t_INT n) possibly wrong if (n, nf.disc) > 1
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
